--- a/css/style.css
+++ b/css/style.css
@@ -1,189 +1,928 @@
-
-@import url("normalize.css");
-
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic");
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
 
 html {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 *,
 *::after,
 *::before {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
-
 body {
-  margin: 0;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  background-color: #ffffff;
-  color: #283136;
-  font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	/* Базовое семейство шрифтов */
+	font-family: 'Roboto', 'Arial','Segoe UI', Tahoma, sans-serif;
+	/* Базовый цвет шрифтов */
+	color: #283136;
+	/* Базовый размер шрифтов */
+	font-size: 16px;
+	/* Базовое начертание шрифтов */
+	font-weight: 400;
+	/* Базовый фоновый цвет шрифтов */
+	background-color: #ffffff;
+	/* Базовая высота строки */
+	line-height: 1;
 }
 
 a {
-  text-decoration: none;
-  color: #000000;
-  font-family: inherit;
+	/* Убиараем подчеркивание у ссылок */
+	text-decoration: none;
+	/* Наследуем шрифты от body */
+	font-family: inherit;
 }
-
 
 img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+	/* Устанавливаем максимальную ширину для изображении */
+	max-width: 100%;
+	/* Автоматическое подстраивание высоты */
+	height: auto;
+	/* Вертикальное выравнивание по середине */
+	vertical-align: middle;
 }
 
-.button {
-  color: #ffffff;
-  text-align: center;
-  vertical-align: middle;
-  text-transform: uppercase;
-	font-family: inherit;
+.centr {
+	max-width: 1200px;
+	width: 100%;
+	padding: 0 20px;
+	margin: auto;
+}
+
+.reset-ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+}
+
+.reset-h,
+.reset-p {
+	padding: 0;
+	margin: 0;
+}
+
+
+.visually-hidden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+
+/*Состояния Логотипа*/
+
+.logo:hover {
+	opacity: 0.8;
+}
+
+.logo:active {
+	opacity: 0.3;
+}
+
+/*Состояния Меню*/
+
+.site-navigation a,
+.user-navigation a {
 	display: inline-block;
-	padding: 18px 39px;
+	position: relative;
 }
 
-.red-button {
-  background-color: #fb565a;
+.site-navigation a:hover,
+.user-navigation a:hover {
+	color: #fb565a;
 }
 
-.green-button {
-  background-color: #00ca74;
+.site-navigation a:active,
+.user-navigation a:active {
+	opacity: 0.3;
+	color: #000000;
 }
 
-.yellow-button {
-  background-color: #efc84a;
+.btn {
+	display: inline-block;
+	max-width: 160px;
+	width: 100%;
+	text-align: center;
+	border-radius: 3px;
+	padding: 19px 10px 18px;
+	color: #ffffff;
+	/* Временно */
+	background-color: #fb565a;
 }
 
-header {
-  background-color: #eeeeee;
+/*Состояния кнопок*/
+
+.filters-form .btn:hover {
+	background-color: #dfdfdf;
 }
 
-.site-navigation,
+.filters-form .btn:active,
+.filters-form .btn:focus {
+	box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+	background-color: #d5d5d5;
+	color:#959595;
+}
+
+
+
+.sort-type a:hover,
+.sort-dir a:hover {
+	opacity: 0.6;
+}
+
+.sort-type a:active,
+.sort-dir a:active
+ {
+	opacity: 1;
+}
+
+.hero .btn:hover,
+.social a:hover,
+.project .btn:hover,
+.contact-block .btn:hover
+ {
+	background-color: #e74246;
+}
+
+.hero .btn:active,
+.project .btn:active,
+.social a:active,
+.contact-block .btn:active {
+	box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+	background-color: #d7373b;
+} 
+
+.social-icon:active img {
+	opacity: 0.3;
+}
+
+.pagination-item a:hover,
+.next a:hover {
+	background-color: #dfdfdf;
+}
+
+.pagination-item a:active,
+.next a:active {
+	box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+	color: #959595;
+}
+
+.btn-red {
+	background-color: #fb565a;
+}
+
+.btn-red:hover {
+	background-color: #e74246;
+}
+
+.btn-red:active {
+	background-color: #d7373b;
+	box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+	color: #E37376;
+}
+
+
+.btn-green {
+	background-color: #00ca74;
+}
+
+.btn-green:hover {
+	background-color: #00bc6c;
+}
+
+.btn-green:active {
+	box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+	background-color: #00aa62;
+	color: #4CC491;
+}
+
+.btn-yellow {
+	background-color: #efc84a;;
+}
+
+.btn-yellow:hover {
+	background-color: #eab534;;
+}
+
+.btn-yellow:active {
+	background-color: #e5a722;
+	box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+	color: #EDC164;
+}
+
+.works-list a:hover {
+	opacity: 1;
+}
+
+.works-list a:active {
+	opacity: 0.1;
+}
+
+/* Стили для шапки */
+.header {
+	background-color: #eeeeee;
+	padding-top: 49px;
+}
+
+.main-navigation {
+	display: flex;
+	justify-content: space-between;
+	padding-bottom: 18px;
+}
+
 .user-navigation {
-  list-style: none;
+	max-width: 117px;
+	align-items: center;
+	display: flex;
+	position: relative;
+	font: inherit;
+} 
+
+.user-navigation a{
+	margin-left: 44px;
 }
 
+.user-navigation .svg {
+	position: absolute;
+	left: -26px;
+}
+
+.site-navigation {
+	max-width: 440px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	
+}
+
+.site-navigation a,
+.user-navigation a {
+	color: #000000;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
+.menu-active {
+	position:relative;
+}
+
+.menu-active::after {
+	position: absolute ;
+	content: '';
+	left: 0;
+	bottom: -10px;
+	width: 100%;
+	height: 2px;
+	background-color: red;
+}
+
+.basket svg{
+	position: absolute;
+	left: 0px;
+}
+
+.header-head {
+	color: #000000;
+	font-size: 55px;
+	font-weight: 500;
+	padding-top: 86px;
+	padding-bottom: 116px;
+	margin: auto;
+	text-align: center;
+}
+/*=======Slider=========*/
+.hero {
+	background-color: #eeeeee;
+}
+
+.hero-list {
+	margin: auto;
+}
+
+.hero-list li {
+	min-height: 430px;
+	padding-top: 86px;
+	padding-bottom: 80px;
+}
+
+.hero-list li:nth-child(1) {
+	background: url('../img/nerds-index-slide1.png') no-repeat right center;
+}
+
+.hero-list li:nth-child(2) {
+	background: url('../img/nerds-index-slide2.png') no-repeat right center;
+}
+
+.hero-list li:nth-child(3) {
+	background: url('../img/nerds-index-slide3.png') no-repeat right center;
+}
+
+.hero-list h2 {
+	color: #000000;
+	font-size: 55px;
+	font-weight: 500;
+	line-height: 55px;
+	margin-bottom: 27px;
+}
+
+.hero-list p {
+	line-height: 24px;
+	margin-bottom: 42px;
+}
+
+.hero-list .btn {
+	max-width: 240px;
+}
+
+/* Стили для Услуг */
 .main-services {
-  list-style: none;
+	padding-top: 80px;
+	padding-bottom: 80px;
+	border-bottom: 2px solid #eeeeee;
 }
 
-.about-column .about-stats-list {
-  list-style: none;
+.services-list {
+	display: flex;
+	justify-content: space-between;
+	max-width: 1100px;
 }
 
-.main-clients .clients-list {
-  list-style: none;
+.services-list li {
+	max-width: 300px;
 }
 
-.footer-social {
-  list-style: none;
+.services-list img {
+	margin-bottom: 26px;
+}
+
+.services-list h3 {
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: 700;
+	font-size: 24px;
+	margin-bottom: 26px;
+}
+
+.services-list p {
+	line-height: 24px;
+	margin-bottom: 35px;
+}
+
+/* Стили для О нас */
+.about {
+	display: flex;
+	justify-content: space-between;
+	padding-top: 40px;
+	padding-bottom: 76px;
+	border-bottom: 2px solid #eee;
+}
+
+.about .item:nth-child(1) {
+	max-width: 660px;
+	width: 100%;
+
+}
+
+.about .item:nth-child(2) {
+	max-width: 360px;
+	width: 100%;
+}
+
+.about h2 {
+	color: #000000;
+	font-size: 45px;
+	font-weight: 500;
+	line-height: 45px;
+	margin-bottom: 35px;
+	margin-top: 40px;
+}
+
+.about p {
+	line-height: 24px;
+	margin-bottom: 47px;
+}
+
+.about h4 {
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: 700;
+	margin-bottom: 49px;
+}
+
+.about-list li {
+	position: relative;
+	padding-left: 35px;
+}
+
+.about-list li:not(:last-child) {
+	margin-bottom: 35px;
+}
+
+.about-list li::before {
+	position: absolute;
+	content: '';
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 25px;
+	height: 2px;
+	background-color: #fb565a;
+}
+
+.about img {
+	display: block;
+	margin-bottom: 46px;
+}
+
+.about-stats {
+	display: flex;
+	justify-content: space-between;
+}
+
+.about-stats li {
+	width: 30%;
+}
+
+.about-stats span {
+	display: block;
+}
+
+.about-stats .number {
+	margin-bottom: 27px;
+	color: #000000;
+	font-size: 45px;
+	font-weight: 700;
+}
+
+.about-stats .name {
+	line-height: 18px;
+}
+
+/* Стили для Проекты */
+.works {
+	padding-top: 46px;
+	padding-bottom: 44px;
+	margin-bottom: 80px;
+	border-bottom: 2px solid #eee;
+}
+
+.works-list {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	max-width: 1080px;
+}
+
+.works-list a {
+	opacity: 0.2;
+}
+
+/* Стили для Контакты */
+.contact-container {
+	position: relative;
+}
+
+.contact-block {
+	position: absolute;
+	left: 0;
+	top: 54px;
+	max-width: 319px;
+	width: 100%;
+	border-radius: 2px;
+	background-color: #ffffff;
+	padding: 54px 50px 47px;
+	z-index: 2;
+}
+
+.contact-block h3 {
+	font-weight: 700;
+	color: #000000;
+	text-transform: uppercase;
+	margin-bottom: 32px;
+}
+
+.contact-block p {
+	margin-bottom: 37px;
+	color: #666666;
+	line-height: 18px;
+	padding-right: 18px;
+}
+
+.contact-block span {
+	display: block;
+	margin-top: 20px;
+}
+
+.contact-block .phone {
+	color: inherit;
+}
+
+.contact-block .btn {
+	max-width: 219px;
+	text-transform: uppercase;
+}
+
+.map {
+	height: 416px;
+	width: 100%;
+}
+
+/* Стили для Подвал */ 
+
+.footer {
+	display: flex;
+	padding-top: 69px;
+	padding-bottom: 69px;
+	
+}
+
+.social {
+	max-width: 260px;
+	display: flex;
+	justify-content: space-between;
+	margin-right: 139px;
+}
+
+.social a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 79px;
+	height: 79px;
+	border-radius: 50%;
+	background-color: #e1e1e1;
+}
+
+.footer p {
+	color: #444444;
+}
+
+.footer b {
+	display: block;
+	margin-bottom: 12px;
+	color: #000000;
+	font-size: 36px;
+	font-weight: 700;
+}
+
+/*Каталог*/
+
+/* Стили для Фильтры */
+.filters {
+	max-width: 260px;
+	width: 100%;
+}
+
+/* Стили для Логической обертки формы */
+.filters fieldset {
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+
+.filters .filters-form__price {
+	margin-bottom: 62px;
+}
+
+.filters .filters-form__grid {
+	margin-bottom: 51px;
+}
+
+.filters .filters-form__features {
+	margin-bottom: 48px;
+}
+
+/* Стили для  Заголовков формы*/
+.filters legend {
+	font-weight: 700;
+	color: #000000;
+	letter-spacing: 0.05px;
+	font-size: 18px;
+	text-transform: uppercase;
+	margin-bottom: 21px;
+}
+
+.filters-form__price legend {
+	margin-bottom: 56px;
+}
+
+/* Стили для  Лейблов */
+label {
+	display: block;
+	padding-left: 37px;
+	position: relative;
+	cursor: pointer;
+}
+
+label:not(:last-child) {
+	margin-bottom: 15px;
+}
+
+/* Стили для  Радио-кнопок*/
+.radio {
+	position: absolute;
+	content: '';
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	background-color: #ffffff;
+	width: 25px;
+	height: 25px;
+	background: url('../img/radio-off.svg') no-repeat center;
+	opacity: 0.4;
+}
+
+input:hover + .radio {
+	opacity: 1;
+}
+
+.input:checked+.radio {
+	background: url('../img/radio-on.svg') no-repeat center;
+}
+
+/* Стили для  Чекбоксов*/
+.checkbox {
+	position: absolute;
+	content: '';
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	background-color: #ffffff;
+	width: 25px;
+	height: 25px;
+	background: url('../img/checkbox-off.svg') no-repeat center;
+	opacity: 0.4;
+}
+
+.input:hover + .checkbox {
+	opacity: 1;
+}
+
+.input:checked+.checkbox {
+	background: url('../img/checkbox-on.svg') no-repeat center;
+	left: 2px;
 }
 
 
-.site-navigation,
-.user-navigation,
-.services-list,
-.about-stats-list,
-.clients-list,
-.footer-social {
-  list-style: none;
+.container-catalog {
+	display: flex;
+	justify-content: space-between;
+	padding-top: 60px;
+}
+
+/* Стили для слайдера  СТОИМОСТЬ*/
+.range-wrap {
+	padding: 39px 21px;
+	border-radius: 2px;
+	margin-bottom: 14px;
+	background-color: #eeeeee;
+}
+
+.range-content {
+	height: 2px;
+	position: relative;
+	width: 100%;
+	background-color: #d7dcde;
+}
+
+.range-line {
+	position: absolute;
+	left: 0;
+	top: 0;
+	content: '';
+	width: 80%;
+	height: 100%;
+	background-color: #00ca74;
+}
+
+.range-button {
+	position: absolute;
+	top: 50%;
+	left: 0%;
+	transform: translateY(-50%);
+	width: 23px;
+	height: 23px;
+	border-radius: 50%;
+	background-color: #ffffff;
+	box-shadow: 0 3px 0 #ababab;
+	position: relative;
+	border: 0;
+	outline: none;
+}
+
+.range-button:nth-child(3) {
+	left: 60%;
+}
+
+.range-button::after {
+	position: absolute;
+	content: '';
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 4px;
+	height: 4px;
+	border-radius: 50%;
+	background-color: #ababab;
+}
+
+.range-cost {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+.range-cost label {
+	max-width: 111px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0;
+	margin: 0;
+	text-transform: uppercase;
+}
+
+.range-cost input {
+	width: 80px;
+	text-align: center;
+	padding: 12px 16px 13px;
+	border: none;
+	background-color: #eeeeee;
+	border-radius: 2px;
+	margin-left: 11px;
+	-moz-appearance: textfield;
+	appearance: textfield;
+}
+
+.range-cost input::-webkit-inner-spin-button,
+.range-cost input::-webkit-outer-spin-button {
+	-webkit-appearance: none;
 }
 
 
-.catalog-lead {
-  text-align: center;
-  color: #000000;
-  font-size: 55px;
-  font-weight: 500;
-  line-height: 55px;
-}
-
-.main-slider .main-tagline {
-  font-size: 55px;
-  line-height: 30px;
-  font-weight: 500;
-}
-
-.main-slider .slide-two,
-.main-slider .slide-three {
-  display: none
+/* Стили для  Кнопки*/
+.filters-form .btn {
+	max-width: 260px;
+	color: #000000;
+	background-color: #eeeeee;
+	border: 0;
+	font-weight: 500;
+	outline: none;
 }
 
 
 
-.main-services h3 {
-  color: #000000;
-  
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 30px;
-  text-transform: uppercase;
+/* Стили для Правой части каталога */
+
+
+.catalog-content {
+	max-width: 760px;
+	width: 100%;
+	justify-content: flex-end;
 }
 
-.about-column .about-lead {
-  color: #000000;
-  
-  font-size: 45px;
-  font-weight: 500;
-  line-height: 45px;
+.sort {
+	display: flex;
+	margin-bottom: 15px;
+	align-items: flex-start;
+}
+
+.sort h4 {
+	text-transform: uppercase;
+	font-weight: 700;
+	color: #000000;
+	vertical-align: top;
+}
+
+.sort-type {
+	display: flex;
+	justify-content: space-between;
+	max-width: 280px;
+	margin-left: auto;
+}
+
+.sort-type a {
+	display: block;
+	text-transform: uppercase;
+	color: #000000;
+	font-size: 14px;
+	opacity: 0.3;
+}
+
+.sort-dir {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	max-width: 40px;
+	width: 100%;
+	margin-left: 39px;
+	
+}
+
+.sort-dir a {
+	color: #000000;
+	opacity: 0.3;
+}
+
+.sort .sort-active {
+	opacity: 1;
+}
+
+.projects-list {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.project {
+	max-width: 360px;
+	width: 100%;
+	margin-bottom: 33px;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	overflow: hidden;
+}
+
+.project-wrap {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	background-color: #eeeeee;
+	text-align: center;
+	padding: 35px 60px 43px;
+	transform: translateY(260px);
+}
+
+.project:hover .project-wrap {
+	transform: translateY(0px);
+	transition: all linear 0.5s;
+}
+
+.project:hover img:first-child {
+	opacity: 1;
+}
+
+.project h3 {
+	text-transform: uppercase;
+	font-weight: 700;
+	margin-bottom: 25px;
+	font-size: 18px;
+	color: #000000;
+
+}
+
+.project p {
+	line-height: 18px;
+	margin-bottom: 30px;
+}
+
+.project .btn {
+	max-width: 200px;
+}
+
+.project img:first-child {
+	opacity: 0.12;
+}
+
+/*Пагинация*/
+
+.pagination-list {
+	display: flex;
+	padding-top: 60px;
+	padding-bottom: 60px;
+}
+
+.pagination-item,
+.pagination-item-current {
+	font: inherit;
+	text-transform: uppercase;
+	font-weight: 500;
+	font-size: 16px;
+	margin-right: 11px;
 }
 
 
-.about-column .about-lead-header {
-  color: #000000;
-  font-weight: 700;
-  text-transform: uppercase;
+.pagination-item-current a {
+	padding: 19px 23px;
+	border: 3px solid #dbdbdb;
+	color: #000000;
+	border-radius: 3px;
 }
 
-.about-column .about-stats-text {
-  color: #000000;
-  font-weight: 700;
-  text-transform: uppercase;
+.pagination-item a {
+	background-color: #eeeeee;
+	padding: 22px 26px;
+	color: #000000;
+	border-radius: 3px;
 }
 
-.about-column .about-stats-list-number {
-  color: #000000;
-  font-size: 45px;
-  font-weight: 700;
-  line-height: 10.06px;
-}
-
-.about-column .about-stats-list-name {
-  line-height: 18px;
-}
-
-
-
-.main-clients .clients-item {
-  opacity: 0.2;
-}
-
-.footer-social li {
-  width: 79px;
-  height: 79px;
-  background-color: #e1e1e1;
-  border-radius: 50%;
-}
-
-.footer-description {
-  color: #000000;
-  font-family: Roboto;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 36px;
-}
-
-.footer-description .friend-social {
-  color: #444444;
-}
-
-.modal {
-  display: none;
+.next a {
+	padding: 22px 82px;
 }
