--- a/css/style.css
+++ b/css/style.css
@@ -394,18 +394,27 @@ img {
 }
 
 .dot {
+  position: relative;
 	width: 20px;
 	height: 20px;
 	border-radius: 50%;
-	background-color: #222222;
+	background-color: #ffffff;
 	border: 0;
 	cursor: pointer;
   transition: all 0.3s ease;
   outline: none;
 }
 
-.dot.selected {
-  background-color:  rgb(228, 207, 19);
+.selected::after{
+  position: absolute;
+  content: "";
+  width: 10px;
+  height: 10px;
+  top: 50%;
+  left: 50%;
+  border: 2px solid #c1c1c1;
+  border-radius: 50%;
+  transform: translate(-50%,-50%);
 }
 
 /* Стили для Услуг */
