--- a/css/style-min.css
+++ b/css/style-min.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
-@import url('normalize.css');
+@import url('normalize-min.css');
 
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
@@ -10,7 +11,8 @@ html {
 *,
 *::after,
 *::before {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 body {
@@ -121,7 +123,8 @@ img {
 
 .filters-form .btn:active,
 .filters-form .btn:focus {
-  box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+  -webkit-box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+          box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
   background-color: #d5d5d5;
   color: #959595;
 }
@@ -149,7 +152,8 @@ img {
 .project .btn:active,
 .social a:active,
 .contact-block .btn:active {
-  box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+  -webkit-box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+          box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
   background-color: #d7373b;
 }
 
@@ -164,7 +168,8 @@ img {
 
 .pagination-item a:active,
 .next a:active {
-  box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+  -webkit-box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+          box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
   color: #959595;
 }
 
@@ -178,7 +183,8 @@ img {
 
 .btn-red:active {
   background-color: #d7373b;
-  box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+  -webkit-box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+          box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
   color: #E37376;
 }
 
@@ -192,7 +198,8 @@ img {
 }
 
 .btn-green:active {
-  box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+  -webkit-box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+          box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
   background-color: #00aa62;
   color: #4CC491;
 }
@@ -209,7 +216,8 @@ img {
 
 .btn-yellow:active {
   background-color: #e5a722;
-  box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+  -webkit-box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+          box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
   color: #EDC164;
 }
 
@@ -247,14 +255,22 @@ img {
 }
 
 .main-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-bottom: 18px;
 }
 
 .user-navigation {
   max-width: 117px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   font: inherit;
@@ -272,9 +288,15 @@ img {
 
 .site-navigation {
   max-width: 440px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 
 }
 
@@ -340,6 +362,8 @@ img {
 	padding-bottom: 80px;
 	z-index: -1;
 	opacity: 0;
+	-webkit-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
 	transition: all 0.5s ease;
 	overflow: hidden;
 } 
@@ -383,11 +407,17 @@ img {
 	position: absolute;
 	bottom: 94px;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
 	max-width: 90px;
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	z-index: 2;
 }
 
@@ -399,6 +429,8 @@ img {
 	background-color: #ffffff;
 	border: 0;
 	cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
   outline: none;
 }
@@ -412,7 +444,9 @@ img {
   left: 50%;
   border: 2px solid #c1c1c1;
   border-radius: 50%;
-  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
 }
 
 /* Стили для Услуг  */
@@ -423,8 +457,12 @@ img {
 }
 
 .services-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   max-width: 1100px;
 }
 
@@ -456,8 +494,12 @@ img {
 
 /* Стили для О нас */
 .about {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-top: 40px;
   padding-bottom: 76px;
   
@@ -514,7 +556,9 @@ img {
   content: '';
   left: 0;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
   width: 25px;
   height: 2px;
   background-color: #fb565a;
@@ -526,8 +570,12 @@ img {
 }
 
 .about-stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .about-stats li {
@@ -567,9 +615,15 @@ img {
 }
 
 .works-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 1171px;
   border-bottom: 2px solid #eee;
   border-top: 2px solid #eee;
@@ -596,7 +650,9 @@ img {
     left: -8%;
     top: 35%;
     border: 1px solid #eee;
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
 }
 
 
@@ -656,6 +712,8 @@ img {
 /* Стили для Подвал */
 
 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-top: 69px;
   padding-bottom: 69px;
@@ -664,15 +722,25 @@ img {
 
 .social {
   max-width: 260px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-right: 139px;
 }
 
 .social a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 79px;
   height: 79px;
   border-radius: 50%;
@@ -753,7 +821,9 @@ label:not(:last-child) {
   content: '';
   left: 0;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
   background-color: #ffffff;
   width: 25px;
   height: 25px;
@@ -775,7 +845,9 @@ input:hover+.radio {
   content: '';
   left: 0;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
   background-color: #ffffff;
   width: 27px;
   height: 25px;
@@ -794,8 +866,12 @@ input:hover+.radio {
 
 
 .container-catalog {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-top: 60px;
 }
 
@@ -828,12 +904,15 @@ input:hover+.radio {
   position: absolute;
   top: 0%;
   left: -1%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
   width: 20px;
   height: 20px;
   border-radius: 50%;
   background-color: #ffffff;
-  box-shadow: 0 1px 0 #CFD0D0;
+  -webkit-box-shadow: 0 1px 0 #CFD0D0;
+          box-shadow: 0 1px 0 #CFD0D0;
   position: relative;
   border: 0;
   outline: none;
@@ -848,7 +927,9 @@ input:hover+.radio {
   content: '';
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 4px;
   height: 4px;
   border-radius: 50%;
@@ -856,16 +937,28 @@ input:hover+.radio {
 }
 
 .range-cost {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .range-cost label {
   max-width: 111px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 0;
   margin: 0;
   text-transform: uppercase;
@@ -880,7 +973,8 @@ input:hover+.radio {
   border-radius: 2px;
   margin-left: 11px;
   -moz-appearance: textfield;
-  appearance: textfield;
+  -webkit-appearance: textfield;
+          appearance: textfield;
 }
 
 .range-cost label:nth-child(2) {
@@ -911,13 +1005,19 @@ input:hover+.radio {
 .catalog-content {
   max-width: 760px;
   width: 100%;
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .sort {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 55px;
-  align-items: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .sort h4 {
@@ -929,8 +1029,12 @@ input:hover+.radio {
 }
 
 .sort-type {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   max-width: 280px;
   margin-left: auto;
   margin-top: 2px;
@@ -946,9 +1050,15 @@ input:hover+.radio {
 }
 
 .sort-dir {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   max-width: 42px;
   width: 100%;
   margin-left: 37px;
@@ -974,17 +1084,27 @@ input:hover+.radio {
 }
 
 .projects-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .project {
   max-width: 360px;
   width: 100%;
   margin-bottom: 33px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: relative;
   overflow: hidden;
 }
@@ -996,11 +1116,17 @@ input:hover+.radio {
   background-color: #eeeeee;
   text-align: center;
   padding: 35px 60px 43px;
-  transform: translateY(260px);
+  -webkit-transform: translateY(260px);
+      -ms-transform: translateY(260px);
+          transform: translateY(260px);
 }
 
 .project:hover .project-wrap {
-  transform: translateY(0px);
+  -webkit-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+          transform: translateY(0px);
+  -webkit-transition: all linear 0.5s;
+  -o-transition: all linear 0.5s;
   transition: all linear 0.5s;
 }
 
@@ -1033,6 +1159,8 @@ input:hover+.radio {
 /*Пагинация*/
 
 .pagination-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-top: 45px;
   padding-bottom: 78px;
@@ -1071,16 +1199,22 @@ input:hover+.radio {
   max-width: 960px;
   width: 100%;
   padding: 73px 90px 84px 100px;
-  box-shadow: 0 20px 40px rgba(0, 1, 1, 0.75);
+  -webkit-box-shadow: 0 20px 40px rgba(0, 1, 1, 0.75);
+          box-shadow: 0 20px 40px rgba(0, 1, 1, 0.75);
 	background-color: #ffffff;
 	/* Анимация  */
-	animation: fadeInDown 1s ease;
+	-webkit-animation: fadeInDown 1s ease;
+	        animation: fadeInDown 1s ease;
 }
 
 /* Шапка Модального окна */
 .modal__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 /* Кнопка выхода Модального окна */
@@ -1095,16 +1229,26 @@ input:hover+.radio {
 
 /* Форма Модального окна */
 .modal-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 /* Лэйбл Модального окна */
 .modal-form__label {
   width: 48%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 0;
   font-weight: 700;
 }
@@ -1145,12 +1289,30 @@ input:hover+.radio {
 	top: 0;
 	/* background-color: #000000; */
 	display: none;
-	align-items: center;
-	justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	z-index: 30;
 	width: 100%;
 	height: 100%;
 	
+}
+
+@-webkit-keyframes fadeInDown {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 @keyframes fadeInDown {
